# functionparser

./: CMakeLists.txt  readme.md
src/: CMakeLists.txt  pybind11.cpp  utils.cpp
test/: test_functionparser.py
